--- a/static/css/elimination.css
+++ b/static/css/elimination.css
@@ -243,13 +243,20 @@ body {
     text-shadow: none;
     font-weight: bold;
     
-    min-width: 120px;
+    min-width: 50px;
     text-align: right;
     flex-shrink: 0;
 }
 
 .sets-info {
-    display: none;
+    display: block; 
+    font-size: 30px;
+    color: #666;
+    text-align: right;
+    min-width: 120px;
+    flex-shrink: 0;
+    line-height: 1.1;
+    margin-top: 2px;
 }
 
 /* Специальные типы матчей */
