--- a/templates/index.html
+++ b/templates/index.html
@@ -238,9 +238,10 @@
                                 <div class="card-body">
                                     <div class="settings-card">
                                         <div class="mb-3">
-                                            <label class="form-label">Интервал обновления (секунды)</label>
-                                            <input type="number" class="form-control" id="refreshIntervalInput" value="30" min="5" max="300">
-                                            <div class="form-text">Как часто обновлять данные кортов (5-300 сек)</div>
+                                            <label class="form-label">Интервал обновления ТАБЛИЦ (секунды)</label>
+                                            <input type="number" class="form-control" id="refreshIntervalInput" value="30" min="10" max="200">
+                                            <div class="form-text">Как часто обновлять данные (5-300 сек)</div>
+											<div class="form-text">Данные кортов обновляются дважды за интервал</div>
                                         </div>
                                         <div class="mb-3">
                                             <label class="form-label">Тема интерфейса</label>
